# private-pypi-hub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
mypackage/: __init__.py  hello.py
server/: auth.sh  docker-compose.yaml  setup.sh  start.sh
testpackage/: README.md  __init__.py  greet.py  pyproject.toml
testpackage/tests/: __init__.py
